@@ -1,7 +1,7 @@
 #ifndef __DECLSPEC_H__
 #define __DECLSPEC_H__
 
-#if defined(WIN32) && !defined(STATICLIB)
+#if defined(_WIN32) && !defined(STATICLIB)
 	#ifdef MINIUPNP_EXPORTS
 		#define LIBSPEC __declspec(dllexport)
 	#else
