@@ -1,5 +1,8 @@
-$Id: Changelog.txt,v 1.157 2012/01/07 10:13:24 nanard Exp $
+$Id: Changelog.txt,v 1.160 2012/01/21 13:30:31 nanard Exp $
 miniUPnP client Changelog.
+
+2012/01/21:
+  Replace WIN32 macro by _WIN32
 
 2012/01/19:
   Fixes in java wrappers thanks to Alexey Kuznetsov :
